* Updated to 1.4.4 tml
* Now supports modded biome torches for "Reverse Torch Swap"
* Now supports ice, desert, and mushroom torches for "Convert Torches When Clentaminating"
* Added config for Aether Torch
* Now localizable. Read the mod description for more info