@@ -2,4 +2,5 @@
 * Now supports modded biome torches for "Reverse Torch Swap"
 * Now supports ice, desert, and mushroom torches for "Convert Torches When Clentaminating"
 * Added config for Aether Torch
+* Now supports campfires
 * Now localizable. Read the mod description for more info
